--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,10 @@
 	<classpathentry kind="lib" path="lib/slf4j/slf4j-log4j12-1.6.1.jar"/>
 	<classpathentry kind="lib" path="lib/jsoup/jsoup-1.5.2.jar"/>
 	<classpathentry kind="lib" path="lib/junit/junit-4.8.2.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpclient-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/httpclient/httpcore-4.1.jar"/>
+	<classpathentry kind="lib" path="lib/guava/guava-r08.jar"/>
+	<classpathentry kind="lib" path="lib/commons/commons-codec-1.4.jar"/>
+	<classpathentry kind="lib" path="lib/commons/commons-logging-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
